--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,19 @@ body {
   /* background-color: #3f3f3f; */
 }
 
+.container {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  flex-direction: column;
+}
+
+.mainTitle {
+  width: 440px;
+  text-align: center;
+  font-size: 42px;
+}
+
 .cool-button {
   /* button styling */
   width: 240px;
@@ -44,4 +57,3 @@ body {
   background-color: #ff0000;
   transition: all 0.3s ease;
 }
-
